# soliton_encirclement_v3

./: CLAUDE.md  CONTROLE.md  Ideias relacionadas ao projeto soliton.md  KdV_exact_solution.m  KdV_sinusoidal_forcing.m  LICENSE  README.md  config_param OLD.py  config_param.py  controllers.py  diagnose_signs.py  equacoes_controle_tangencial.md  equacoes_controle_tangencial_v2.md  events.csv  main OLD.py  main.py  metrics.pptx  plot_limiter_soft.py  plot_telemetry.py  propagation_layer.py  protocol_adversary.py  protocol_agent OLD.py  protocol_agent.py  protocol_messages.py  protocol_target.py  pyproject.toml  run_sweep.py  runs_summary.csv  runs_summary1.csv  runs_summary2.csv  target_telemetry.csv
demos/: __init__.py
demos/velocity_mobility/: __init__.py  main.py  protocol.py
examples/: ex_constant_velocity.py
src/gradysim_velocity_mobility/: __init__.py  config.py  core.py  handler.py
src/velocity_mobility/: __init__.py  config.py  core.py  handler.py
tests/: test_controllers.py  test_core_limits.py  test_core_step.py  test_damped_advection.py  test_propagation.py
